# serialport

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  resources.qrc  serialport.pro
.github/workflows/: build.yml
docs/: hardware.md  protocol.md  release.md
firmware/stm32_uart_demo/: README.md  main.c
release/: moc_predefs.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: ringbuffer.cpp  ringbuffer.h  samplepack.cpp  samplepack.h  stream.cpp  stream.h  streamchannel.cpp  streamchannel.h
src/plot/: plotwidget.cpp  plotwidget.h
src/protocol/: protocolframe.cpp  protocolframe.h  protocolparser.cpp  protocolparser.h
src/readers/: abstractreader.cpp  abstractreader.h  asciireader.cpp  asciireader.h  demoreader.cpp  demoreader.h
src/serial/: serialcontroller.cpp  serialcontroller.h
src/storage/: csvrecorder.cpp  csvrecorder.h
tests/core/: core_tests.pro  tst_core.cpp
tests/ui/: final-run.txt  out.txt  red-out.txt  task3-review.txt  tst_mainwindowlayout.cpp  tst_mainwindowlayout.h  ui_layout_test.pro
